# vtk_cxx_example

./: README.md
Acotor/: README.md
Interactor/: README.md  README.txt
Interactor/ColorDisconnectedRegions/: ColorDisconnectedRegions.cxx
PolyData/: README.md
PolyData/VTKProjects/: CMakeLists.txt  技术文档.url
PolyData/VTKProjects/src/: CMakeLists.txt
PolyData/VTKProjects/src/AlignFrames/: AlignFrames.cxx  CMakeLists.txt
PolyData/VTKProjects/src/AttachAttributes/: AttachAttributes.cxx  CMakeLists.txt
PolyData/VTKProjects/src/Casting/: CMakeLists.txt  Casting.cxx
PolyData/VTKProjects/src/CellCenters/: CMakeLists.txt  CellCenters.cxx
PolyData/VTKProjects/src/CellCentersDemo/: CMakeLists.txt  CellCentersDemo.cxx
PolyData/VTKProjects/src/CellEdgeNeighbors/: CMakeLists.txt  CellEdgeNeighbors.cxx
PolyData/VTKProjects/src/CellLocator/: CMakeLists.txt  CellLocator.cxx
PolyData/VTKProjects/src/CellLocatorVisualization/: CMakeLists.txt  CellLocatorVisualization.cxx
PolyData/VTKProjects/src/CenterOfMass/: CMakeLists.txt  CenterOfMass.cxx
PolyData/VTKProjects/src/CleanPolyData/: CMakeLists.txt  CleanPolyData.cxx
PolyData/VTKProjects/src/ColorCells/: CMakeLists.txt  ColorCells.cxx
PolyData/VTKProjects/src/ColorCellsWithRGB/: CMakeLists.txt  ColorCellsWithRGB.cxx
PolyData/VTKProjects/src/ColorDisconnectedRegions/: CMakeLists.txt
PolyData/VTKProjects/src/ColoredPoints/: CMakeLists.txt  ColoredPoints.cxx
PolyData/VTKProjects/src/ContoursToSurface/: CMakeLists.txt  ContoursToSurface.cxx
PolyData/VTKProjects/src/ConvexHullShrinkWrap/: CMakeLists.txt  ConvexHullShrinkWrap.cxx
PolyData/VTKProjects/src/CopyAllArrays/: CMakeLists.txt  CopyAllArrays.cxx
PolyData/VTKProjects/src/CurvaturesAdjustEdges/: CMakeLists.txt  CurvaturesAdjustEdges.cxx  README.md
PolyData/VTKProjects/src/CurvaturesDemo/: CMakeLists.txt  CurvaturesDemo.cxx
PolyData/VTKProjects/src/Outline/: CMakeLists.txt  Outline.cxx
PolyData/VTKProjects/src/PolyDataPointSampler/: CMakeLists.txt  PolyDataPointSampler.cxx
PolyData/VTKProjects/src/Reflection/: CMakeLists.txt  Reflection.cxx
PolyData/VTKProjects/src/ResampleAppendedPolyData/: CMakeLists.txt  ResampleAppendedPolyData.cxx
PolyData/VTKProjects/src/RotationAroundLine/: CMakeLists.txt  RotationAroundLine.cxx
PolyData/VTKProjects/src/SelectPolyData/: CMakeLists.txt  SelectPolyData.cxx
PolyData/VTKProjects/src/TriangleColoredPoints/: CMakeLists.txt  TriangleColoredPoints.cxx
PolyData/VTKProjects/src/TriangleSolidColor/: CMakeLists.txt  TriangleSolidColor.cxx
坐标轴/: README.md
坐标轴/correctStl/: CMakeLists.txt  README.,md  README.md
坐标轴/correctStl/forms/: MainWindow.ui
坐标轴/correctStl/include/: MainWindow.h
坐标轴/correctStl/src/: MainWindow.cpp  main.cpp
